# rust-cellular-automatas

./: Cargo.toml  README.md
src/: braille.rs  canvas.rs  main.rs  settings.rs
src/cellular_automata/: conway.rs  gravity.rs  highlife.rs  mod.rs
