[package]
name = "rust-cellular-automatas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
clap = { version = "4.2.2", features = ["derive"] }
rand = "0.8.5"
rayon = "1.7.0"
termion = "2.0.1"
